--- a/TimkiemGoogle.html
+++ b/TimkiemGoogle.html
@@ -5,8 +5,8 @@
     <title>Tim kiem Google</title>
 </head>
 <body>
-<form action="https://www.google.com.vn/search">
-    <label><input type="text"></label>
+<form action="https://www.google.com.vn/search" method="get">
+    <label><input type="text" name="q"></label>
     <input type="submit" value="Tìm kiếm">
 </form>
 </body>
